@@ -1,0 +1,54 @@
+<?xml version="1.0"?>
+<!-- generated by wxGlade 0.3.2 on Sun Oct 03 18:26:47 2004 -->
+
+<application path="" name="" class="" option="0" language="python" top_window="" encoding="ISO-8859-1" use_gettext="0" overwrite="0" use_new_namespace="1">
+    <object class="wxDialog" name="ScreenshotDialog" base="EditDialog">
+        <style>wxDIALOG_MODAL|wxCAPTION|wxSYSTEM_MENU</style>
+        <title>Information</title>
+        <centered>1</centered>
+        <object class="wxBoxSizer" name="sizer_1" base="EditBoxSizer">
+            <orient>wxVERTICAL</orient>
+            <object class="sizeritem">
+                <flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+                <border>10</border>
+                <option>0</option>
+                <object class="wxBoxSizer" name="TextSizer" base="EditBoxSizer">
+                    <orient>wxHORIZONTAL</orient>
+                    <object class="sizeritem">
+                        <flag>wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+                        <border>0</border>
+                        <option>1</option>
+                        <object class="wxStaticText" name="label_1" base="EditStaticText">
+                            <attribute>1</attribute>
+                            <label>A new screenshot has been saved. Please check Status Info for details</label>
+                        </object>
+                    </object>
+                </object>
+            </object>
+            <object class="sizeritem">
+                <flag>wxALL</flag>
+                <border>10</border>
+                <option>0</option>
+                <object class="wxCheckBox" name="DoNotShow" base="EditCheckBox">
+                    <label>Don't show this message again</label>
+                </object>
+            </object>
+            <object class="sizeritem">
+                <flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+                <border>10</border>
+                <option>0</option>
+                <object class="wxBoxSizer" name="ButtonSizer" base="EditBoxSizer">
+                    <orient>wxHORIZONTAL</orient>
+                    <object class="sizeritem">
+                        <flag>wxLEFT|wxRIGHT</flag>
+                        <border>3</border>
+                        <option>0</option>
+                        <object class="wxButton" name="OkButton" base="EditButton">
+                            <label>OK</label>
+                        </object>
+                    </object>
+                </object>
+            </object>
+        </object>
+    </object>
+</application>
